Add validation for entities
