# docs/openapi.yaml
@@ -20,6 +20,12 @@ paths:
       responses:
         '201':
           description: Создана карта
+        '400':
+          description: Ошибка валидации данных
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExceptionBody'
         '401':
           description: Не авторизован
           content:
@@ -616,6 +622,12 @@ paths:
       responses:
         '200':
           description: Пользователь зарегистрирован
+        '400':
+          description: Ошибка валидации данных
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExceptionBody'
         '409':
           description: Конфликт
           content:
